// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
<DocumentFragment>
  <nav
    class="NavBar"
  >
    <a
      href="/"
      id="NavBar-logo"
    >
      Jobly
    </a>
    <ul>
      <li>
        <a
          href="/companies"
        >
          Companies
        </a>
      </li>
      <li>
        <a
          href="/jobs"
        >
          Jobs
        </a>
      </li>
      <li>
        <a
          href="/profile"
        >
          Profile
        </a>
      </li>
      <li>
        <a
          href="/"
        >
          Log Out
        </a>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`matches snapshot when logged out 1`] = `
<DocumentFragment>
  <nav
    class="NavBar"
  >
    <a
      href="/"
      id="NavBar-logo"
    >
      Jobly
    </a>
    <ul>
      <li>
        <a
          href="/login"
        >
          Login
        </a>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;
